--- a/src/app/admin/add-edit-material-handover/add-edit-material-handover.component.css
+++ b/src/app/admin/add-edit-material-handover/add-edit-material-handover.component.css
@@ -1,49 +1,41 @@
 .example-spacer {
-    flex: 1 5 auto;
-    
+    flex: 1 1 auto;
+    margin-bottom: 20px;
+    color: rgb(20, 89, 92);
+    font-size: 18px;
 }
 
- .date{
-    width: 200px;
+.material-icons {
+    color: rgb(20, 89, 92);
+    margin-bottom: 20px;
 }
 
-mat-toolbar{
-    height:38px;
-    margin-bottom:-20px;
-    padding: 0px;
+mat-toolbar {
+    height: 40px;
     background: none;
+    color: whitesmoke;
+    padding: 0px;
     position: relative;
-    top:-20px;
-    color:#14595c;
-  
 }
-mat-form-field{
+
+
+mat-form-field {
     margin-right: 5px;
-    top:5px;
+    top: 5px;
 }
-.Add_item{
-    color:#14595c; 
-    font-size:20px;    
-    margin-bottom:20px;
-}
-.addmh{
-    border: 2px solid gray;
-}
-mat-icon{
-    font-size:25px;
-    float: right;
-  
-}
+
 #table {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     border-collapse: collapse;
-    width:100%;
+    width: 100%;
 }
+
 .trth {
     color: white;
     background-color: #0f575a;
     height: 40px;
-    font-weight: bold;
+    font-size: 16px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 tr:nth-child(even) {
@@ -66,38 +58,52 @@ ng-container {
 }
 
 .cotainer {
-    /* margin-top: 5px; */
-    margin-top: -5px;
+    margin-top: -39px;
 }
-.data:hover {
-    color: white;
+
+.mat-row:hover>.mat-cell {
+    color: white
 }
-.addbtn{
-    width:50px;
+
+.addbtn {
+    width: 100px;
     top: 5px;
-    height: 40px;
+    height: 35px;
     background-color: #0f575a;
     color: whitesmoke;
     border-radius: 5px;
 }
-span{
+
+span {
     color: #0f575a;
 }
-.search input{
-    border-bottom: 1px solid black;
-    outline: none;
-    padding: 4px;
-    background-color: whitesmoke;
-    width: 25%;
-    float: right;
-}
-.count_search{
+
+.count_search {
     height: 40px;
-    width: 100%;
-    padding:10px 0px 10px 10px;
+    /* width: 88%; */
+    width: auto;
+    float: right;
+    display: flex;
+    justify-content: space-between;
+    padding: 10px 10px 0px 10px;
     box-sizing: border-box;
     color: #0d5e58;
+
+}
+.notice_text {
+    float: right;
+    padding-left: 490px;
 }
 
 
-  
+.search input {
+    border-bottom: 1px solid #0a4547;
+    outline: none;
+    padding: 7px 2px 6px 7px;
+    background-color: whitesmoke;
+    position: relative;
+    top: -5px;
+    left: 0px;
+}
+
+
