--- a/src/app/admin/add-edit-production/add-edit-production.component.css
+++ b/src/app/admin/add-edit-production/add-edit-production.component.css
@@ -1,46 +1,31 @@
 .example-spacer {
-  flex: 1 5 auto;
-
+  flex: 1 1 auto;
+  margin-bottom: 20px;
+  color: rgb(20, 89, 92);
+  font-size: 18px;
 }
 
-.date {
-  width: 200px;
+.material-icons {
+  color: rgb(20, 89, 92);
+  margin-bottom: 20px;
 }
 
 mat-toolbar {
-  height: 38px;
-  margin-bottom: -20px;
-  padding: 0px;
+  height: 40px;
   background: none;
+  color: whitesmoke;
+  padding: 0px;
   position: relative;
-  top: -20px;
-  color: #14595c;
-
 }
+
 
 mat-form-field {
   margin-right: 5px;
   top: 5px;
 }
 
-.Add_item {
-  color: #14595c;
-  font-size: 20px;
-  margin-bottom: 20px;
-}
-
-.addmh {
-  border: 2px solid gray;
-}
-
-mat-icon {
-  font-size: 25px;
-  float: right;
-
-}
-
 #table {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   border-collapse: collapse;
   width: 100%;
 }
@@ -49,7 +34,8 @@ mat-icon {
   color: white;
   background-color: #0f575a;
   height: 40px;
-  font-weight: bold;
+  font-size: 16px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 tr:nth-child(even) {
@@ -75,8 +61,8 @@ ng-container {
   margin-top: -39px;
 }
 
-.data:hover {
-  color: white;
+.mat-row:hover>.mat-cell {
+  color: white
 }
 
 .addbtn {
@@ -94,24 +80,27 @@ span {
 
 .count_search {
   height: 40px;
-  width: 100%;
+  width: auto;
   float: right;
-  /* display: flex; */
-  /* justify-content: space-between; */
-  padding: 10px 0px 10px 10px;
+  display: flex;
+  justify-content: space-between;
+  padding: 10px 10px 0px 10px;
   box-sizing: border-box;
   color: #0d5e58;
 
 }
 
+/* .notice_text {
+  padding-top: 10px;
+} */
+
 .search input {
   border-bottom: 1px solid #0a4547;
   outline: none;
-  padding: 4px;
+  padding: 7px 2px 6px 7px;
   background-color: whitesmoke;
-  width: 25%;
-  float: right;
-  /* position: relative;
+  position: relative;
   top: -5px;
-  left:630px; */
+  left: 0px;
 }
+
