--- a/src/app/admin/purchase-report/purchase-report.component.css
+++ b/src/app/admin/purchase-report/purchase-report.component.css
@@ -1,5 +1,6 @@
 .view_notice {
     height: 40px;
+    margin-top: 63px;
     width: 100%;
     background-color: #0b4648;
     color: whitesmoke;
@@ -21,38 +22,99 @@
 
 .count_search {
     height: 40px;
-    width: 100%;
+    width: 10%;
     margin-top: 23px;
     display: flex;
     justify-content: space-between;
-    padding: 5px;
+    padding: 10px 10px 0px 10px;
     box-sizing: border-box;
     color: #0d5e58;
    
 }
-.datetime{
-    height: 100%;
-    width: 150px;
-   
+
+
+.column{
+    width: 177px;
+    margin-top: 26px;
+    height: 66px;
+    padding-top: -1px;
 }
-.example-full-width{
-    height: 300px;
-}
+
+
 .search input {
     border-bottom: 1px solid #0a4547;
     outline: none;
-    padding: 5px;
-    background-color: whitesmoke;
+    padding: 7px 2px 6px 7px;
+    float: right;
+    width: 119px;
+    margin-top: -34px;
     position: relative;
     top: 2px;
     left: 0px;
 }
 
+.text_box{
+    width: 150px;
+    margin-top: -3px;
+    float: right;
+    position: fixed;
+    margin-left: 557px;
+    padding: 31px 2px 1px 5px;
+    border-bottom: 1px solid black;
+}
+ .text_boxe{
+    padding-left: 12px;
+    width: 180px;
+    padding-top: 5px;
+    height: 42px;
+    margin-right: 713px;
+    cursor: pointer;
+    margin-top: 2px;
+    border-bottom: 1px solid black;
+    float: right;
+    background-color: #0000000A;
+    font-size: 13px;
+} 
+.ppt{
+    right: 47%
+}
+
+    
+.search_area{
+    width: 100%;
+    height: 47px;
+    margin-left: 1px;
+   
+}
+
+ mat-form-field{
+   width: 185px;
+   height: 51px;
+   margin-top: -2px;
+   margin-right: 2px;
+   
+  
+} 
+mat-datepicker-toggle{
+    position: fixed;
+    /* left: 70px; */
+    right: 60%;
+    top: 15%;
+  }
+
+  
+
+  .toogle{
+    background-color: red;
+    right: 30%;
+  }
+  
+
 mat-icon {
     background-color: transparent;
     border: none;
     font-size: 20px;
-    line-height: 30px;
+    line-height: 23px;
 }
 
 #table {
@@ -66,7 +128,7 @@ mat-icon {
     background-color: #0f575a;
     height: 40px;
     font-weight: bold;
-    padding-left: 38px;
+    padding-left: 82px;
 }
 
 tr:nth-child(even) {
@@ -92,11 +154,30 @@ ng-container {
     margin-top: 5px;
 }
 
-.mat-form-field {
-    font-size: 18px;
-    width: 100%;
-}
+
 
 .data:hover {
     color: white;
+}
+.footer_amount{
+    height:40px;
+    width: 100%;
+    background-color: #070f17;
+    margin-top:460px ; 
+  
+}
+.total{    
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color:whitesmoke; 
+    padding-left:129px;   
+    margin-left:50px;    
+    line-height:45px;
+    float:left;
+    margin-left:5%;
+}
+form span{
+    width: 100px;
+    height: 10px;
+    font-size: 20px;
+   
 }
