--- a/src/app/admin/sale-report/sale-report.component.html
+++ b/src/app/admin/sale-report/sale-report.component.html
@@ -3,13 +3,38 @@
     <span class="notice_text">Sale Report</span>
     <mat-icon id="print_sale_report" routerLink="/add_customer_details">local_printshop</mat-icon>
   </div>
-  <div class="count_search">
-    <span class="notice_text"> Total :</span>
 
-    <div class="search">
-      <input matInput (keyup)="applyFilter($event)" placeholder="Search" #input>
-    </div>
+  <div class="search_area">
+    <mat-form-field appearance="fill">
+      <mat-label>Month</mat-label>
+      <mat-select>
+        <mat-option>Month</mat-option>
+        <mat-option *ngFor="let state of states" [value]="state">{{state}}</mat-option>
+      </mat-select>
+    </mat-form-field>
+
+    <mat-form-field appearance="fill">
+      <mat-label>From</mat-label>
+      <input matInput [matDatepicker]="picker">
+      <!-- <mat-hint>MM/DD/YYYY</mat-hint> -->
+      <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+      <mat-datepicker #picker></mat-datepicker>
+    </mat-form-field>
+
+    <mat-form-field appearance="fill">
+      <mat-label>To</mat-label>
+      <input matInput [matDatepicker]="picker1" >
+   
+      <mat-datepicker-toggle class="ppt" matIconSuffix [for]="picker1"></mat-datepicker-toggle>
+      <mat-datepicker #picker1></mat-datepicker>
+    </mat-form-field>
+
+    <!-- <input matInput type="date" placeholder="Search" #input class="text_boxe"> -->
+    <input matInput type="Search" placeholder="Search" #input class="text_box">
+    
   </div>
+
+  <!-- ------------------------------------------------------------------------------------------------------------------ -->
   <div class="cotainer">
     <form>
       <div class="mat-elevation-z8">
@@ -71,10 +96,19 @@
       </div>
     </form>
   </div>
+  <!-- <mat-form-field appearance="fill">
+    <mat-label>Choose a date</mat-label>
+    <input matInput [matDatepicker]="picker" class="ppt">
+    <mat-hint>MM/DD/YYYY</mat-hint>
+    <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+    <mat-datepicker #picker></mat-datepicker>
+  </mat-form-field> -->
+
+
+
   <div class="footer_amount">
     <span class="total">Total GST : 0 |</span>
     <span class="total">Discount : 0 |</span>
     <span class="total">Basic amount : 0 |</span>
     <span class="total">Total amount : 0 </span>
   </div>
-</div>
