--- a/src/app/admin/stock-report/stock-report.component.css
+++ b/src/app/admin/stock-report/stock-report.component.css
@@ -11,6 +11,19 @@
     padding: 10px;
     box-sizing: border-box;
 }
+.search_area{
+    height: 50px;
+}
+
+.text_box{
+    width: 150px;
+    margin-top: -1px;
+    float: right;
+    position: fixed;
+    margin-left: 940px;
+    padding: 31px 2px 1px 5px;
+    border-bottom: 1px solid black;
+}
 
 #add_dues {
     position: relative;
@@ -21,6 +34,7 @@
 
 .notice_text {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+   
 }
 
 .count_search {
@@ -37,9 +51,10 @@
     border-bottom: 1px solid #0a4547;
     outline: none;
     padding: 5px;
+    float: right;
     background-color: whitesmoke;
     position: relative;
-    top: -5px;
+    top: 3px;
     left: 0px;
 }
 
@@ -47,7 +62,7 @@ mat-icon {
     background-color: transparent;
     border: none;
     font-size: 20px;
-    line-height: 30px;
+    line-height: 24px;
 }
 
 #table {
@@ -61,7 +76,10 @@ mat-icon {
     background-color: #0f575a;
     height: 40px;
     font-weight: bold;
+    padding-right: 12px;
+    padding-left: 99px;
 }
+
 
 tr:nth-child(even) {
     background-color: whitesmoke;
@@ -87,8 +105,8 @@ ng-container {
 }
 
 .mat-form-field {
-    font-size: 18px;
-    width: 100%;
+    width: 180px;
+    height: 20px;
 }
 
 .data:hover {
@@ -98,13 +116,14 @@ ng-container {
 .footer_amount {
     width: 100%;
     height:44px;
-    margin-top: 355px;
+    margin-top: 463px;
     background-color: #191d1d;
 }
 .footer_amount span {  
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
-    margin-left:385px;
+    margin-left:315px;
     color: whitesmoke;
     letter-spacing: 1px;   
-    line-height:40px; 
+    line-height:47px; 
+    padding-left: 5px;
 }
+
