--- a/src/app/admin/material-handover/material-handover.component.html
+++ b/src/app/admin/material-handover/material-handover.component.html
@@ -26,17 +26,17 @@
               <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Mobile</th>
               <td class="data" mat-cell *matCellDef="let row">{{row.emp_mobile}}</td>
             </ng-container>  
-            <ng-container matColumnDef="mh_quantity">
+            <ng-container matColumnDef="quantity">
               <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Quantity</th>
-              <td class="data" mat-cell *matCellDef="let row">{{row.item_name}}</td>
+              <td class="data" mat-cell *matCellDef="let row">{{row.quantity}}</td>
             </ng-container>
             <ng-container matColumnDef="mh_date">
               <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Date</th>
               <td class="data" mat-cell *matCellDef="let row">{{row.mh_date}}</td>
             </ng-container>
-            <ng-container matColumnDef="mh_item">
+            <ng-container matColumnDef="item_name">
               <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Item</th>
-              <td class="data" mat-cell *matCellDef="let row">{{row.mh_item}}</td>
+              <td class="data" mat-cell *matCellDef="let row">{{row.item_name}}</td>
             </ng-container>                         
             <ng-container matColumnDef="Action">
               <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Action</th>
