--- a/src/app/admin/material-handover/material-handover.component.html
+++ b/src/app/admin/material-handover/material-handover.component.html
@@ -21,10 +21,10 @@
             <ng-container matColumnDef="emp_name">
               <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Employee</th>
               <td class="data" mat-cell *matCellDef="let row">{{row.emp_name}}</td>
-            </ng-container>
-            <ng-container matColumnDef="emp_mobile">
-              <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Mobile</th>
-              <td class="data" mat-cell *matCellDef="let row">{{row.emp_mobile}}</td>
+            </ng-container>            
+            <ng-container matColumnDef="cat_name">
+              <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Category</th>
+              <td class="data" mat-cell *matCellDef="let row">{{row.cat_name}}</td>
             </ng-container>  
             <ng-container matColumnDef="quantity">
               <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Quantity</th>
