--- a/src/app/admin/add-edit-area-allocate/add-edit-area-allocate.component.html
+++ b/src/app/admin/add-edit-area-allocate/add-edit-area-allocate.component.html
@@ -9,8 +9,8 @@
             <input type="number" formControlName="alct_area_id" readonly hidden>           
             <mat-form-field appearance="fill">
                 <mat-label>Employee Name</mat-label>
-                <mat-select formControlName="emp_id_fk" (valueChange)="getEmpData($event)">
-                    <mat-option *ngFor="let emp of empdata" [value]="emp.emp_id">{{emp.emp_name }}</mat-option>                                    
+                <mat-select formControlName="emp_id_fk">
+                    <mat-option *ngFor="let empdata of empdata" [value]="empdata.emp_id">{{empdata.emp_name}}</mat-option>                                    
                 </mat-select>
             </mat-form-field><br>
 
@@ -24,7 +24,7 @@
             <mat-form-field appearance="fill">
                 <mat-label>Area distance</mat-label>
                 <mat-select formControlName="alct_area_distance_id_fk">
-                    <mat-option *ngFor="let areadata of areadata" [value]="areadata.area_id">{{areadata.area_distance}}</mat-option>
+                    <mat-option *ngFor="let areadata of areadata" [value]="areadata.area_distance">{{areadata.area_distance}}</mat-option>                                    
                 </mat-select>
             </mat-form-field><br>     
             <mat-form-field appearance="fill">
