--- a/src/app/admin/area-allocate/area-allocate.component.html
+++ b/src/app/admin/area-allocate/area-allocate.component.html
@@ -18,25 +18,25 @@
             <td class="data" mat-cell *matCellDef="let row; let i = index;">{{(paginatorRef.pageIndex *
               paginatorRef.pageSize)+(i+1)}}</td>
           </ng-container>
-          <ng-container matColumnDef="alct_area_emp_id_fk">
+          <ng-container matColumnDef="emp_name">
             <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Emp name</th>
-            <td class="data" mat-cell *matCellDef="let row">{{row.alct_area_emp_id_fk}}</td>
+            <td class="data" mat-cell *matCellDef="let row">{{row.emp_name}}</td>
           </ng-container>
-          <ng-container matColumnDef="alct_area_name_id_fk">
+          <ng-container matColumnDef="area_name">
             <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Area</th>
-            <td class="data" mat-cell *matCellDef="let row">{{row.alct_area_name_id_fk}}</td>
+            <td class="data" mat-cell *matCellDef="let row">{{row.area_name}}</td>
           </ng-container>
-          <ng-container matColumnDef="alct_area_distance_id_fk">
+          <ng-container matColumnDef="area_distance">
             <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Distance</th>
-            <td class="data" mat-cell *matCellDef="let row">{{row.alct_area_distance_id_fk}}</td>
+            <td class="data" mat-cell *matCellDef="let row">{{row.area_distance}}</td>
           </ng-container>
           <ng-container matColumnDef="alct_area_date">
             <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Date</th>
             <td class="data" mat-cell *matCellDef="let row">{{row.alct_area_date}}</td>
           </ng-container>
-          <ng-container matColumnDef="alct_area_desc">
+          <ng-container matColumnDef="alct_area_des">
             <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Description</th>
-            <td class="data" mat-cell *matCellDef="let row">{{row.alct_area_desc}}</td>
+            <td class="data" mat-cell *matCellDef="let row">{{row.alct_area_des}}</td>
           </ng-container>
           <ng-container matColumnDef="Action">
             <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Action</th>
