--- a/src/app/admin/add-edit-product/add-edit-product.component.html
+++ b/src/app/admin/add-edit-product/add-edit-product.component.html
@@ -27,6 +27,8 @@
                         [value]="weightdata.weight_id">{{weightdata.weight_name}}</mat-option>
                 </mat-select>
             </mat-form-field>
+        </div>
+        <div class="column">
 
             <mat-form-field appearance="fill">
                 <mat-label>Unit</mat-label>
@@ -52,7 +54,7 @@
         </div>
         <div class="column" id="column_1">
             <mat-form-field appearance="fill">
-                <mat-label>production Cost</mat-label>
+                <mat-label>Production Cost</mat-label>
                 <input formControlName="product_produ_cost" matInput placeholder="produ Cost">
             </mat-form-field>
 
