--- a/src/app/admin/account/account.component.css
+++ b/src/app/admin/account/account.component.css
@@ -5,7 +5,7 @@
     height: 40px;
     width: 100%;
     background-color: #0b4648;
-    color: whitesmoke;
+    color: whitesmoke; 
     display: flex;
     justify-content: space-between;
     padding: 10px;
@@ -21,22 +21,25 @@
 
 .notice_text {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-}
+    font-style: italic;
+    font-size: 16px;}
 
 .count_search {
     height: 40px;
     width: 100%;
     display: flex;
     justify-content: space-between;
-    padding: 10px;
+    padding: 10px 10px 0px 10px;
     box-sizing: border-box;
     color: #0d5e58;
 }
-
-.search input {
+.count_search .notice_text{
+    font-size: 16px;
+}
+.search input{   
     border-bottom: 1px solid #0a4547;
     outline: none;
-    padding: 5px;
+    padding: 7px 2px 6px 7px;
     background-color: whitesmoke;
     position: relative;
     top: -5px;
@@ -51,7 +54,7 @@ mat-icon {
 }
 
 #table {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     border-collapse: collapse;
     width: 100%;
 }
@@ -60,7 +63,8 @@ mat-icon {
     color: white;
     background-color: #0f575a;
     height: 40px;
-    font-weight: bold;
+    font-size: 16px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
 }
 
 tr:nth-child(even) {
@@ -77,25 +81,56 @@ tr:hover {
     color: aliceblue;
     cursor: pointer;
 }
-
+.mat-row:hover > .mat-cell {
+    color:  white
+  }
 ng-container {
     text-align: center;
-}
-
-.cotainer {
-    margin-top: 5px;
 }
 
 .mat-form-field {
     font-size: 18px;
     width: 100%;
 }
+/* //////////////////////////table media q//////////////////////////// */
 
-.data:hover {
-    color: white;
+@media (max-width:460px) {
+    .notice_text {
+        font-size: 13px;
+    }
+    .count_search .notice_text{
+        font-size: 13px;
+    }
+    table th {
+        font-size: 13px;
+    }
+
+    table td {
+        font-size: 13px;
+    }
+
+    th.mat-header-cell:first-of-type {
+        padding-left: 13px;
+    }
+
+    th.mat-header-cell:last-of-type {
+        padding-right: 0px;
+        width: 0%;
+    }
+
+    td.mat-cell:first-of-type {
+        padding-left: 20px;
+    }
+
+    td.mat-cell:last-of-type {
+        padding-right: 0px;
+        padding-left: 10px;
+    }
+   
 }
 
-@media (max-width: 700px) {
+
+/* @media (max-width: 700px) {
     .trth {
         width: 100%;
 
@@ -104,4 +139,4 @@ ng-container {
     .data {
         width: 100%;
     }
-}
+} */
