--- a/src/app/admin/add-edit-item/add-edit-item.component.css
+++ b/src/app/admin/add-edit-item/add-edit-item.component.css
@@ -4,7 +4,9 @@
   height: 285px;
   float: left;
 }
-
+.column mat-form-field{
+  margin-left: 5px;
+}
 .example-spacer {
   flex: 1 1 auto;
   margin-bottom: 20px;
