--- a/src/app/admin/add-edit-production/add-edit-production.component.css
+++ b/src/app/admin/add-edit-production/add-edit-production.component.css
@@ -4,7 +4,9 @@
   color: rgb(20, 89, 92);
   font-size: 18px;
 }
-
+form .column{
+  height: 175px;
+}
 .material-icons {
   color: rgb(20, 89, 92);
   margin-bottom: 20px;
@@ -67,8 +69,8 @@ ng-container {
 
 .addbtn {
   width: 100px;
-  top: 5px;
-  height: 35px;
+  margin: 0px 2px 1px 3px;   
+  height: 34px;
   background-color: #0f575a;
   color: whitesmoke;
   border-radius: 5px;
@@ -97,10 +99,88 @@ span {
 .search input {
   border-bottom: 1px solid #0a4547;
   outline: none;
-  padding: 7px 2px 6px 7px;
+  padding: 6px 0px 6px 7px;
   background-color: whitesmoke;
   position: relative;
   top: -5px;
   left: 0px;
+}
+
+@media (min-width:768px) and (max-width:1100px){
+
+  .column {
+    width: 100%;
+    height: auto;
+  }
+  
+  .column mat-form-field {
+    width: 24.1%;
+   
+  }
+}
+
+@media (min-width:421px) and (max-width:767px) {
+ 
+  .column {
+    width: 100%;
+    height: auto;
+  }
+
+  .column mat-form-field {
+    width: 100%;
+  }
+  form .column{
+    height: auto;
+  }
+ 
+}
+@media (max-width:420px) {
+  .column {
+    width: 100%;
+    height: auto;
+  }
+
+  .column mat-form-field {
+    width: 100%;
+  }
+
+  form .column{
+    height: auto;
+  }
+
+  .cotainer {
+    margin-top: 5px;
+  }
+  .notice_text {
+    font-size: 13px;
+}
+.count_search .notice_text{
+    font-size: 13px;
+}
+table th {
+    font-size: 13px;
+}
+
+table td {
+    font-size: 13px;
+}
+
+th.mat-header-cell:first-of-type {
+    padding-left: 13px;
+}
+
+th.mat-header-cell:last-of-type {
+    padding-right: 0px;
+    width: 0%;
+}
+
+td.mat-cell:first-of-type {
+    padding-left: 20px;
+}
+
+td.mat-cell:last-of-type {
+    padding-right: 0px;
+    padding-left: 10px;
+}
 }
 
