--- a/src/app/admin/dues/dues.component.css
+++ b/src/app/admin/dues/dues.component.css
@@ -12,37 +12,35 @@
     box-sizing: border-box;
 }
 
-#add_dues {
-    position: relative;
-    top: -5px;
-    left: 2px;
-    cursor: pointer;
-}
-
 .notice_text {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-}
+    font-style: italic;
+    font-size: 16px;}
 
-.count_search {
-    height: 40px;
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    padding: 10px;
-    box-sizing: border-box;
-    color: #0d5e58;
-}
-
-.search input {
-    border-bottom: 1px solid #0a4547;
-    outline: none;
-    padding: 5px;
-    background-color: whitesmoke;
-    position: relative;
-    top: -5px;
-    left: 0px;
-}
-
+    .count_search {
+        height: 40px;
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        padding: 10px 10px 0px 10px;
+        box-sizing: border-box;
+        color: #0d5e58;
+    }
+    
+    .count_search .notice_text {
+        font-size: 16px;
+    }
+    
+    .search input {
+        border-bottom: 1px solid #0a4547;
+        outline: none;
+        padding: 7px 2px 6px 7px;
+        background-color: whitesmoke;
+        position: relative;
+        top: -5px;
+        left: 0px;
+    }
+    
 mat-icon {
     background-color: transparent;
     border: none;
@@ -51,7 +49,7 @@ mat-icon {
 }
 
 #table {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     border-collapse: collapse;
     width: 100%;
 }
@@ -60,8 +58,8 @@ mat-icon {
     color: white;
     background-color: #0f575a;
     height: 40px;
-    font-weight: bold;
-}
+    font-size: 16px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;}
 
 tr:nth-child(even) {
     background-color: whitesmoke;
@@ -77,20 +75,51 @@ tr:hover {
     color: aliceblue;
     cursor: pointer;
 }
+.mat-row:hover>.mat-cell {
+    color: white
+}
 
 ng-container {
     text-align: center;
-}
-
-.cotainer {
-    margin-top: 5px;
 }
 
 .mat-form-field {
     font-size: 18px;
     width: 100%;
 }
+/* //////////////////////////table media q//////////////////////////// */
 
-.data:hover {
-    color: white;
+@media (max-width:460px) {
+    .notice_text {
+        font-size: 13px;
+    }
+    .count_search .notice_text{
+        font-size: 13px;
+    }
+    table th {
+        font-size: 13px;
+    }
+
+    table td {
+        font-size: 13px;
+    }
+
+    th.mat-header-cell:first-of-type {
+        padding-left: 13px;
+    }
+
+    th.mat-header-cell:last-of-type {
+        padding-right: 0px;
+        width: 0%;
+    }
+
+    td.mat-cell:first-of-type {
+        padding-left: 20px;
+    }
+
+    td.mat-cell:last-of-type {
+        padding-right: 0px;
+        padding-left: 10px;
+    }
+    
 }
