--- a/src/app/admin/sale/sale.component.html
+++ b/src/app/admin/sale/sale.component.html
@@ -14,39 +14,25 @@
       <div class="mat-elevation-z8">
         <table mat-table [dataSource]="dataSource" matSort id="table">
           <ng-container matColumnDef="slno">
-            <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>SL NO.</th>
+            <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>S.N.</th>
             <td class="data" mat-cell *matCellDef="let row; let i = index;">{{(paginatorRef.pageIndex *
               paginatorRef.pageSize)+(i+1)}}</td>
           </ng-container>
 
-          <ng-container matColumnDef="sale_cust_name">
+          <ng-container matColumnDef="cust_name">
             <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Customer</th>
-            <td class="data" mat-cell *matCellDef="let row">{{row.sale_cust_name}}</td>
-          </ng-container>
-
-          <ng-container matColumnDef="sale_total_amount">
-            <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Total amount</th>
-            <td class="data" mat-cell *matCellDef="let row">{{row.sale_total_amount}}</td>
+            <td class="data" mat-cell *matCellDef="let row">{{row.cust_name}}</td>
           </ng-container>
 
           <ng-container matColumnDef="sale_bill_number">
             <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Bill Number</th>
-            <td class="data" mat-cell *matCellDef="let row">{{row.sale_bill_number}}</td>
+            <td class="data" mat-cell *matCellDef="let row">{{row.sale_bill_no}}</td>
           </ng-container>
+    
 
           <ng-container matColumnDef="sale_basic_amount">
-            <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Basic Amount</th>
-            <td class="data" mat-cell *matCellDef="let row">{{row.sale_basic_amount}}</td>
-          </ng-container>
-
-          <ng-container matColumnDef="sale_gst">
-            <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>GST</th>
-            <td class="data" mat-cell *matCellDef="let row">{{row.sale_gst}}</td>
-          </ng-container>
-
-          <ng-container matColumnDef="sale_dues">
-            <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Dues</th>
-            <td class="data" mat-cell *matCellDef="let row">{{row.sale_dues}}</td>
+            <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Total Amount</th>
+            <td class="data" mat-cell *matCellDef="let row">{{row.sale_total_amount}}</td>
           </ng-container>
 
           <ng-container matColumnDef="sale_discount">
@@ -54,11 +40,25 @@
             <td class="data" mat-cell *matCellDef="let row">{{row.sale_discount}}</td>
           </ng-container>
 
-          <ng-container matColumnDef="sale_bill_no">
-            <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Discount</th>
-            <td class="data" mat-cell *matCellDef="let row">{{row.sale_bill_no}}</td>
+          <ng-container matColumnDef="sale_gst">
+            <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>GST</th>
+            <td class="data" mat-cell *matCellDef="let row">{{row.sale_gst}}</td>
+          </ng-container>
+          <ng-container matColumnDef="gross_amount">
+            <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Gross Amount</th>
+            <td class="data" mat-cell *matCellDef="let row">{{row.sale_gross_amount}}</td>
+          </ng-container>
+          <ng-container matColumnDef="sale_paid">
+            <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Paid</th>
+            <td class="data" mat-cell *matCellDef="let row">{{row.sale_paid}}</td>
           </ng-container>
 
+          <ng-container matColumnDef="sale_dues">
+            <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Dues</th>
+            <td class="data" mat-cell *matCellDef="let row">{{row.sale_dues}}</td>
+          </ng-container>
+
+        
           <ng-container matColumnDef="sale_date">
             <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Date</th>
             <td class="data" mat-cell *matCellDef="let row">{{row.sale_date}}</td>
@@ -67,14 +67,14 @@
           <ng-container matColumnDef="Action">
             <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Action</th>
             <td class="data" mat-cell *matCellDef="let row">
-              <!-- <mat-icon (click)="editsale(row)">edit</mat-icon> -->
+              <mat-icon>edit</mat-icon>
             </td>
           </ng-container>
 
           <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
           <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
           <tr class="mat-row" *matNoDataRow>
-            <td class="mat-cell" colspan="4">No data show"{{input.value}}"</td>
+            <td class="mat-cell" colspan="11">No data show"{{input.value}}"</td>
           </tr>
         </table>
         <mat-paginator #paginatorRef [pageSizeOptions]="[10, 25, 100]"
